# Sombrero-quest

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build.ps1  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml  build.yml  publish.yml
shared/: ColorUtils.hpp  Concepts.hpp  FastColor.hpp  FastQuaternion.hpp  FastVector2.hpp  FastVector3.hpp  HSBColor.hpp  MiscUtils.hpp  QuaternionUtils.hpp  RandomUtils.hpp  Taskutils.hpp  Vector2Utils.hpp  Vector3Utils.hpp  linq.hpp  linq_functional.hpp
src/: task_example.cpp  test.cpp
